Remove extra margin at .content-box__info. fix #537

--- a/nextgisweb/static/css/helpers/_utilities.less
+++ b/nextgisweb/static/css/helpers/_utilities.less
@@ -2,3 +2,9 @@
 .padding-block{
   padding: 16px;
 }
+
+.nextgis.claro .padding-block__stretch,
+.padding-block__stretch{
+	margin-left: -16px;
+	margin-right: -16px;
+}
