--- a/nextgisweb/static/css/layout.less
+++ b/nextgisweb/static/css/layout.less
@@ -515,16 +515,18 @@ table{
 
     .content-box__info{
         background-color: @lightBlue-2;
-        padding: 10px 20px;
-        margin: 20px -20px;
+        padding: 10px 16px;
+        margin-top: 16px;
+        margin-bottom: -16px;
         color: @light-text-2;
+        .padding-block__stretch;
     }
         .content-box__info:last-child{
-            margin-bottom: -20px;
+            margin-bottom: -16px;
         }
 
         .content-box__info:first-child{
-            margin-top: -20px;
+            margin-top: -16px;
         }
     
 /* Sidebar */    
